--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <section class="advantages-section">
     <div class="container">
-        <h2 class="advantages-title" hidden>Advantages</h2>
+        <h2 class="advantages-title visually-hidden">Advantages</h2>
         <ul class="advantages-list">
             <li class="advantages-list-item one">
                 <h3 class="advantages-item-title">721</h3>
