--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -158,7 +158,6 @@
   background-color: var(--button-color);
   border-radius: 22px;
   border-color: transparent;
-
   font-weight: bold;
   font-size: 14px;
   line-height: 18px;
@@ -169,24 +168,19 @@
   justify-content: center;
   color: var(--dark-accent-color);
   transition: all var(--time) var(--delay);
+  &:hover,
+  &:focus {
+    background-color: var(--dark-accent-color);
+    color: var(--button-color);
+    fill: var(--button-color);
+  }
   @media screen and (min-width: 772px) {
     margin-left: 0;
   }
 }
 
 .about-button-icon {
-  fill: var(--dark-accent-color);
+  fill: currentColor;
   margin-left: 14px;
   transition: all var(--time) var(--delay);
-}
-
-.about-button-icon:hover,
-.about-button-icon:focus {
-  fill: var(--button-color);
-}
-
-.about-button:hover,
-.about-button:focus {
-  background-color: var(--dark-accent-color);
-  color: var(--button-color);
 }
