--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,6 @@
 <section class="about-section">
     <div class="container">
-        <label class="about-label" for="#">Tradition and love</label>
+        <p class="about-label">Tradition and love</p>
         <h2 class="about-title">How it's made</h2>
         <div class="about-for-flex">
             <picture>
