adds Customer reviews quotation marks from Lightlawn

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,49 +1,60 @@
 <section class="customer">
   <div class="container">
-    <picture><!-- girl-smiling -->
+    <picture
+      ><!-- girl-smiling -->
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-desktop.webp    1x,
-          ./images/customer-reviews/girl-smiling-desktop@2x.webp 2x"
+          ./images/customer-reviews/girl-smiling-desktop@2x.webp 2x
+        "
         media="(min-width: 1200px)"
-        type="image/webp"/>
+        type="image/webp"
+      />
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-desktop.jpg    1x,
-          ./images/customer-reviews/girl-smiling-desktop@2x.jpg 2x"
-        media="(min-width: 1200px)"/>
+          ./images/customer-reviews/girl-smiling-desktop@2x.jpg 2x
+        "
+        media="(min-width: 1200px)"
+      />
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-tablet.webp    1x,
-          ./images/customer-reviews/girl-smiling-tablet@2x.webp 2x"
+          ./images/customer-reviews/girl-smiling-tablet@2x.webp 2x
+        "
         media="(min-width: 768px)"
-        type="image/webp"/>
+        type="image/webp"
+      />
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-tablet.jpg    1x,
-          ./images/customer-reviews/girl-smiling-tablet@2x.jpg 2x"
-        media="(min-width: 768px)"/>
+          ./images/customer-reviews/girl-smiling-tablet@2x.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-mobile.webp    1x,
-          ./images/customer-reviews/girl-smiling-mobile@2x.webp 2x"
+          ./images/customer-reviews/girl-smiling-mobile@2x.webp 2x
+        "
         media="(min-width: 480px)"
-        type="image/webp"/>
+        type="image/webp"
+      />
       <source
         srcset="
           ./images/customer-reviews/girl-smiling-mobile.jpg    1x,
-          ./images/customer-reviews/girl-smiling-mobile@2x.jpg 2x"
-        media="(min-width: 480px)"/>
+          ./images/customer-reviews/girl-smiling-mobile@2x.jpg 2x
+        "
+        media="(min-width: 480px)"
+      />
       <img
         src="./images/customer-reviews/girl-smiling-mobile.jpg"
         class="customer-img-girl"
-        alt="smiling girl Emily"/>
+        alt="smiling girl Emily"
+      />
     </picture>
     <div class="customer-card">
       <div class="customer-card-text">
-        <svg class="customer-card-icon">
-         <use href="./images/icon-sprite.svg#icon-quotation-marks"></use>
-        </svg>
         <p class="customer-text">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
           Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
