--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="How-it’s-made?">
     <div class="container">   
         <p class="about__label">tradition and love</p>
         <h1 class="title">how it’s made?</h1>
