--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="home">
     <div class="container">
                 <include src="./partials/header.html"></include>
 
