--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,4 +1,4 @@
-<section class="swiper">
+<section class="swiper" id="about">
   <div class="swiper-container">
     <h2 class="title visually-hidden">Testimonials</h2>
     <div class="swiper-wrapper">
