--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,4 +1,4 @@
-<section class="locations">
+<section class="locations" id="contact">
     <div class="container">
         <h2 class="visually-hidden">Contacts</h2>
         <ul class="list locations__list">
