--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,7 +10,7 @@
                 <button type="button" class="products-btn">
                     <svg class="products-btn-icon">
                         <use 
-                            href="./images/sprite/sprite_projects.svg#arrow-right">
+                            href="./images/sprite/sprite_projects.svg#arrow_right">
                         </use>
                     </svg>
                 </button>
@@ -22,7 +22,7 @@
                 <button type="button" class="products-btn">
                     <svg class="products-btn-icon">
                         <use 
-                            href="./images/sprite/sprite_projects.svg#arrow-right">
+                            href="./images/sprite/sprite_projects.svg#arrow_right">
                         </use>
                     </svg>
                 </button>
@@ -34,7 +34,7 @@
                 <button type="button" class="products-btn">
                     <svg class="products-btn-icon">
                         <use 
-                            href="./images/sprite/sprite_projects.svg#arrow-right">
+                            href="./images/sprite/sprite_projects.svg#arrow_right">
                         </use>
                     </svg>
                 </button>
