--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -5,6 +5,33 @@
                 <a class="logo" href="index.html">
                     <img src="./images/jpg/logo/logo.png" alt="">
                 </a>
+                <!-- <ul class="navigation__menu">
+                    <li>
+                        <a href="">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            About us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            How it’s made?
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Our products
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            Contact
+                        </a>
+                    </li>
+                </ul> -->
                 <button class="menu-burger__btn" data-menu-button>
                     <svg class="menu-burger__icon">
                         <use href="/images/sprite.svg#icon-menu"></use>
