--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -8,9 +8,12 @@
 }
 .navigation{
   &__container{
- display: flex;
+  display: flex;
   align-items: center;
   justify-content: space-between;
+  &__menu{
+    display: flex;
+  }
   }
 }
 
