--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -17,7 +17,7 @@
           <div class="dropdown">
             <button class="products-button" type="button">
               <svg class="arrow-icon">
-                <use href="./img/sprite.svg#icon-arrow-right"></use>
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
               </svg>
               <div class="dropdown-content">
                 <p>
@@ -44,7 +44,7 @@
           <div class="dropdown">
             <button class="products-button" type="button">
               <svg class="arrow-icon">
-                <use href="./img/sprite.svg#icon-arrow-right"></use>
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
               </svg>
               <div class="dropdown-content">
                 <p>
@@ -73,7 +73,7 @@
           <div class="dropdown">
             <button class="products-button" type="button">
               <svg class="arrow-icon">
-                <use href="./img/sprite.svg#icon-arrow-right"></use>
+                <use href="./images/sprite.svg#icon-arrow-right"></use>
               </svg>
               <div class="dropdown-content">
                 <p>
