найшов проблему з крапкою

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,8 +1,10 @@
 .page-header {
-  background: transparent; 
+  background: transparent;
+  display: flex; 
+  justify-content: space-between;
 
   
-   & container {
+   & .container {
      display: flex;
      align-items: center;
      justify-content: space-between;
@@ -52,15 +54,17 @@
 
 
 .burger-btn {
-    background-color: transparent;
-    border: none;
-    margin-left: auto;
-    padding: 0px;
-    }
+  width: 40px;
+  height: 24px;
+  background-color: teal;
+  border: none;
+  padding: 0px;
+}
 
-   .burger-btn-icon {
-     width: 40px;
-     height:24px;
-     fill: #D41443;
-   } 
+  .burger-btn-icon {
+   
+    width: 40px;
+    height:24px;
+    fill: #D41443;
+  } 
 }
