--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
-<footer>
-    <div class="container">
+<footer class="footer">
+    <div class="container footer__container">
       <ul class="foot_button">
         <li> <button type="button" class="foot_button-location">Our Locations        
                       <svg class="button_sign-white">
