--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,9 +1,8 @@
-footer {
+.footer {
     min-width: 320px;
+    background-color: $rose-section-color;
      }
-.container {
- background-color: $rose-section-color;
-}     
+     
 .foot_button {
    margin-right: auto;
    margin-left: auto;
@@ -272,7 +271,7 @@ text-transform: uppercase;
 color: $rose-text-color;
 
 }
-.container{
+.footer__container{
    padding-right: 0;
    padding-left: 0;
 }
