--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -13,18 +13,18 @@
             <div class="slider-quote">
               <div class="slider-text">
                 <p class="text-quote">
-                  It's OK... Windows is for housewives, Mac -
+<!--                   It's OK... Windows is for housewives, Mac -
                   for people, and Linux - for admins. And one more thing: if background-color, then
                   it's tomato. We study all this for 8 weeks, so that you become a human!
-<!--                   Все нормально, все окей... Windows - для домохозяек, Mac - 
+ -->              Все нормально, все ОК... Windows - для домохозяек, Mac - 
                   для людей, а Линуха - для админов. И еще: если background-color, то 
-                  это tomato. Мы все это учим 8 недель, чтоб ты человеком стал!
- -->                </p>
+                  tomato. Для чего мы все это учим 8 недель, чтоб ты человеком стал!
+                 </p>
               </div>
             </div>
           </div>
           <div class="slider-adress">
-            <p class="slider-adress-text">Alexander, Kyiv</p>
+            <p class="slider-adress-text">Александр, Киев</p>
           </div>
         </div>
       </div>
@@ -40,18 +40,18 @@
             <div class="slider-quote">
               <div class="slider-text">
                 <p class="text-quote">
-                  Guys, check this layout, and literally disassemble it into
+<!--                   Guys, check this layout, and literally disassemble it into
                   molecules ... Section "Customer Reviews", you can put photos of your classmates 
                   instead of these beautiful bitches. But, please, no teachers. 
-<!--                   Ребята, смотрим макет, и буквально разбираем его на 
+ -->              Ребята, смотрим макет, и буквально разбираем его на 
                   молекулы... Секция "Отзывы клиентов", можете туда вместо этих 
                   красивых тёть вставить фото одногруппников. Преподов не надо.
- -->                </p>
+               </p>
               </div>
             </div>
           </div>
           <div class="slider-adress">
-            <p class="slider-adress-text">Denys, Odessa</p>
+            <p class="slider-adress-text">Денис, Одесса</p>
           </div>
         </div>
       </div>
@@ -60,26 +60,26 @@
         <div class="slider-block">
           <img
             class="slider-avatar"
-            src="./images/7-testimonials//anton.webp"
-            alt="Антон Черный - SEO GoIT"
+            src="./images/7-testimonials//sasha.webp"
+            alt="Александра Данилюк - client happiness manager GoIT"
           />
           <div class="slider-bg">
             <div class="slider-quote">
               <div class="slider-text">
                 <p class="text-quote">
-                  GoIT-company takes pride in what our graduates do. We are 
+<!--                   GoIT-company takes pride in what our graduates do. We are 
                   used to collect inspirational stories of those who started their 
                   IT careers from GoIT courses. Good luck to you, newbie!
-                  <!-- В GoIT гордятся тем, что делают наши выпускники. Мы постоянно
-                  собираем вдохновляющие истории тех, кто начал свою IT-карьеру 
-                  с обучения в GoIT. -->
+ -->              Дорогие мои! 32 поток, я в вас верю! Приложите максимум усилий на проекте!
+                  Знаю, что все получится, вы у меня лучшие!!! Всех обняла, поцеловала, 
+                  погладила, прижала к сердцу! Мимимишечки...
                 </p>
               </div>
 
             </div>
           </div>
           <div class="slider-adress">
-            <p class="slider-adress-text">Anton, Kyiv</p>
+            <p class="slider-adress-text">Александра, Киев</p>
           </div>
         </div>
       </div>
