--- a/src/sass/layout/_testimonials.scss
+++ b/src/sass/layout/_testimonials.scss
@@ -104,9 +104,9 @@ letter-spacing: 0.04em
 
 .slider-adress-text {
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 20px;
-  line-height: 186%;
+  line-height: 1.86;
 }
 
 .slider-quote {
@@ -120,7 +120,7 @@ letter-spacing: 0.04em
     margin-left: auto;
     font-size: 100%;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 2.47;
     text-align: center;
     letter-spacing: 0.03em;
@@ -202,11 +202,16 @@ p.text-quote {
   }
 }
 
+.text-quote,
+.slider-adress-text {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+
   .text-quote {
     width: 100%;
     line-height: 2.55;
     font-size: 12px;
-    font-weight: 500;
     letter-spacing: 0.04em;
     margin: 0 auto;
 
