Добавляет якоря на ссылки

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -12,11 +12,11 @@
     
                 <ul class="compositions-links">
                     <li class="compositions-links__item">
-                        <a class="button button--accent link" href="#Products">Products</a>
+                        <a class="button button--accent link" href="#product">Products</a>
                     </li>
     
                     <li class="compositions-links__item">
-                        <a class="button link" href="#How it’s made?">How it’s made?</a>
+                        <a class="button link" href="#How-it’s-made?">How it’s made?</a>
                     </li>
                 </ul>
             </div>
