--- a/src/sass/layout/_customer.scss
+++ b/src/sass/layout/_customer.scss
@@ -35,6 +35,7 @@
   font-size: 12px;
   line-height: 2.58;
   margin-bottom: 50px;
+  color: var(--primary-black-color);
   z-index: 3;
   background-image: repeating-linear-gradient(
     to bottom,
@@ -72,7 +73,7 @@
   font-size: 12px;
   line-height: 2.6;
   text-align: center;
-
+  color: var(--primary-black-color);
   margin-top: 50px;
 }
 
