--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -52,20 +52,20 @@
                 </svg>
             </button>
             <ul class="list mobile-menu__list">
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#home">Home</a>
+                <li class="mobile-menu__item">
+                    <a class="mobile-menu__link" href="#home">Home</a>
                 </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#about">About us</a>
+                <li class="mobile-menu__item">
+                    <a class="mobile-menu__link" href="#about">About us</a>
                 </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#How-it’s-made?">How it’s made?</a>
+                <li class="mobile-menu__item">
+                    <a class="mobile-menu__link" href="#How-it’s-made?">How it’s made?</a>
                 </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#product">Our products</a>
+                <li class="mobile-menu__item">
+                    <a class="mobile-menu__link" href="#product">Our products</a>
                 </li>
-                <li class="navigation__item">
-                    <a class="navigation__link" href="#contact">Contact</a>
+                <li class="mobile-menu__item">
+                    <a class="mobile-menu__link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
