--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -8,8 +8,8 @@
 
   background: rgba(0, 0, 0, 0.2);
   overflow-y: scroll;
-  z-index: 100;
-
+  z-index: 110;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
@@ -56,7 +56,7 @@
     & {
       width: 100%;
       max-width: 80vw;
-      height: 700px;
+      height: 100vh;
       padding-left: 20px;
       padding-right: 20px;
       padding-bottom: 30px;
