изменил названия классов

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="footer__wrapper">
       <div class="footer__slogan">
-        <p class="subtitle">homemade ice cream made</p>
-        <p class="title">with passion</p>
+        <p class="footer__slogan--small">homemade ice cream made</p>
+        <p class="footer__slogan--large">with passion</p>
       </div>
 
       <div class="footer__contacts">
