--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -14,184 +14,199 @@
     padding-top: 83px;
     padding-bottom: 10px;
   }
-}
 
-.footer__wrapper {
-  width: 100%;
-  margin-bottom: 65px;
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 120px;
-  }
-  @media screen and (min-width: $tablet) {
-    margin-bottom: 106px;
-  }
-}
-
-.footer__slogan {
-  margin-bottom: 43px;
-  max-width: 232px;
-
-  @media screen and(min-width: $tablet) {
-    margin-bottom: 0;
-    max-width: 340px;
+  &__wrapper {
+    width: 100%;
+    margin-bottom: 65px;
+    @media screen and (min-width: $tablet) {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 120px;
+    }
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 106px;
+    }
   }
 
-  @media screen and(min-width: $desktop) {
-    max-width: 478px;
-  }
-}
-
-.footer .subtitle {
-  margin-bottom: 17px;
-  font-size: 18px;
-  line-height: 1.16;
- 
-  @media screen and(min-width: $tablet) {
-    font-size: 26px;
-    line-height: 1.15;
-    letter-spacing: 0.04em;
-  }
-
-  @media screen and(min-width: $desktop) {
-    font-size: 30px;
-    line-height: 1.13;
-  }
-}
-
-.footer .title {
+  &__slogan {
+    margin-bottom: 43px;
+    max-width: 232px;
   
-  font-size: 34px;
-  line-height: 1.147;
-  letter-spacing: 0.04em;
-
-  @media screen and(min-width: $tablet) {
-    font-size: 48px;
-    line-height: 1.15;
-    letter-spacing: 0.06em;
+    @media screen and(min-width: $tablet) {
+      margin-bottom: 0;
+      max-width: 340px;
+    }
+  
+    @media screen and(min-width: $desktop) {
+      max-width: 478px;
+    }
   }
 
-  @media screen and(min-width: $desktop) {
-    font-size: 58px;
-    line-height: 1.4;
+  &__slogan--small {
+    font-family: $ff-accent;
+    margin-bottom: 17px;
+    font-size: 18px;
+    line-height: 1.16;
+    text-transform: uppercase;
+    color: var(--accent-primary-color);
+  
+    @media screen and(min-width: $tablet) {
+      font-size: 26px;
+      line-height: 1.15;
+      letter-spacing: 0.04em;
+    }
+  
+    @media screen and(min-width: $desktop) {
+      font-size: 30px;
+      line-height: 1.13;
+    }
+  }
+
+  &__slogan--large {
+    font-family: $ff-accent;
+    font-size: 34px;
+    line-height: 1.147;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--accent-primary-color);
+  
+    @media screen and(min-width: $tablet) {
+      font-size: 48px;
+      line-height: 1.15;
+      letter-spacing: 0.06em;
+    }
+  
+    @media screen and(min-width: $desktop) {
+      font-size: 58px;
+      line-height: 1.4;
+    }
+  }
+
+  &__contacts--wrapper {
+    margin-top: 46px;
+    width: 230px;
+    margin-left: auto;
+  
+    @media screen and(min-width: $tablet) {
+      width: 268px;
+    }
+  
+    @media screen and(min-width: $desktop) {
+      margin-top: 50px;
+      width: 319px;
+    }
+  }
+
+  &__contacts--appeal {
+    font-family: $ff-main;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.86;
+    margin-left: auto;
+    margin-right: auto;
+  
+    color: #000000;
+    display: inline;
+  
+    @media screen and(min-width: $tablet) {
+      font-size: 14px;
+    }
+  
+    @media screen and(min-width: $desktop) {
+      font-size: 16px;
+    }
+  }
+
+  &__contacts--tel {
+    color: var(--accent-primary-color);
+    display: inline;
+  }
+  
+  &__copyright {
+    max-width: 149px;
+    margin-left: auto;
+    margin-right: auto;
+  
+    @media screen and(min-width: $tablet) {
+      max-width: 767px;
+    }
+  
+    @media screen and(min-width: $desktop) {
+      max-width: 1600px;
+    }
+  }
+  
+  &__copyright::before {
+    content: '';
+  
+    position: absolute;
+    left: 0;
+    bottom: 90px;
+    width: 100%;
+    height: 1px;
+    background-color: #e1e1e1;
+  
+    @media screen and(min-width: $tablet) {
+      bottom: 73px;
+    }
+  
+    @media screen and(min-width: $desktop) {
+      bottom: 45px;
+    }
+  }
+  
+  &__copyright--text {
+    font-family: $ff-main;
+  
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.52;
+  
+    text-align: center;
+  
+    color: var(--copyright-text-color);
+  
+    @media screen and(min-width: $tablet) {
+      line-height: 1.86;
+    }
   }
 }
+
 
 .social-networks {
   display: flex;
   justify-content: flex-end;
-}
 
-.social-networks__item:not(:last-child) {
-  margin-right: 28px; 
-}
-
-.social-networks__btn {
-  display: inline-flex;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-
-  background-color: var(--social-bgc);
-  color: var(--light-text-color);
-  fill: currentColor;
-  transition: background-color $time-main $timing-function-main;
-
-  &:hover,
-  &:focus {
-    background-color: var(--accent-primary-color);
+  &__item:not(:last-child) {
+    margin-right: 28px;
   }
-}
 
-.footer__contacts--wrapper{
-  margin-top: 46px;
-  width: 230px;
-  margin-left: auto;
-
-   @media screen and(min-width: $tablet) {
-    width: 268px;
-   }
-
-   @media screen and(min-width: $desktop) {
-     margin-top: 50px;
-     width: 319px;
-   }
-}
-
-.footer__contacts--appeal {
-  font-family: $ff-main;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 1.86;
-  margin-left: auto;
-  margin-right: auto;
+  &__btn {
+    display: inline-flex;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
   
-
-  color: #000000;
-  display: inline;
-
-  @media screen and(min-width: $tablet) {
-    font-size: 14px;
-  }
-
-  @media screen and(min-width: $desktop) {
-    font-size: 16px;
-  }
-}
-
-.footer__contacts--tel {
-  color: var(--accent-primary-color);
-  display: inline;
-}
-
-.footer__copyright {
-  max-width: 149px;
-  margin-left: auto;
-  margin-right: auto;
-
-  @media screen and(min-width: $tablet) {
-    max-width: 767px;
-  }
-
-  @media screen and(min-width: $desktop) {
-    max-width: 1600px;
+    background-color: var(--social-bgc);
+    color: var(--light-text-color);
+    fill: currentColor;
+    transition: background-color $time-main $timing-function-main;
+  
+    &:hover,
+    &:focus {
+      background-color: var(--accent-primary-color);
+    }
   }
 }
 
-.footer__copyright::before {
-  content: '';
 
-  position: absolute;
-  left: 0;
-  bottom: 90px;
-  width: 100%;
-  height: 1px;
-  background-color: #e1e1e1;
 
-  @media screen and(min-width: $tablet) {
-    bottom: 73px;
-  }
 
-  @media screen and(min-width: $desktop) {
-    bottom: 45px;
-  }
-}
 
-.footer__copyright--text {
-  font-family: $ff-main;
 
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.52;
 
-  text-align: center;
 
-  color: var(--copyright-text-color);
 
-  @media screen and(min-width: $tablet) {
-    line-height: 1.86;
-  }
-}
+
