Паддинги и ширина пофикшено

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -29,15 +29,15 @@
   flex-direction: column;
   padding: 160px 40px 41px 40px;
   // padding-bottom: 41px;
-  height: 485px;
-  min-width: 280px;
-  max-width: 320px;
+  // height: 485px;
+  // min-width: 280px;
+  // max-width: 320px;
   position: relative;
   border-radius: 24px;
 
   @media screen and (min-width: 768px) {
     padding: 152px 11px 40px 11px;
-    width: 220px;
+    // width: 220px;
     padding-bottom: 40px;
 
     &:not(:last-child) {
@@ -46,8 +46,8 @@
   }
 
   @media screen and (min-width: 1200px) {
-    width: 329px;
-    height: 525px;
+    // width: 329px;
+    // height: 525px;
     padding: 163px 44px 50px 44px;
 
     &:not(:last-child) {
