--- a/src/sass/_modal-buy-now.scss
+++ b/src/sass/_modal-buy-now.scss
@@ -116,7 +116,8 @@
     padding-left: 42px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:focus {
+    &:focus,
+    &:hover {
         outline: none;
         border-color: $text-red-color;
     }
@@ -133,7 +134,8 @@
     background: #FFFFFF;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    .modal-form-input:focus+& {
+    .modal-form-input:focus+&,
+    .modal-form-input:hover+& {
         fill: $text-red-color;
     }
 }
@@ -155,7 +157,8 @@
     padding: 12px 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:focus {
+    &:focus,
+    &:hover {
         outline: none;
         border-color: $text-red-color;
     }
