html modal (h2,p,iframe)

--- a/src/partials/about-modal.html
+++ b/src/partials/about-modal.html
@@ -2,24 +2,23 @@
   <div class="about-modal">
     <button class="about-close" type="button" data-modal-close>
       <svg class="close-icon" width="11" height="11">
-        <use href="./images/sprite.svg#icon-close"></use>
+        <use href="./images/sprite.svg#icon-cross"></use>
       </svg>
     </button>
     <form action="#" class="about-form">
-      <h2 class="about-modal-title">Lorem, ipsum dolor.</h2>
+      <h2 class="about-modal-title">We know everything about ice cream!</h2>
       <p class="about-modal-first-p">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fugiat,
-        tempore illo facilis illum commodi laborum et eius, vel reiciendis
-        laboriosam dolore asperiores repellat, voluptate accusantium eligendi
-        libero ea explicabo
+        Ice-Cream Service is one the first companies in Ukraine, that started
+        selling specialized ingredients and related goods for the non-industrial
+        ice-cream production from its own warehouse.
       </p>
-      <p class="about-modal-second-p">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fugiat,
-        tempore illo facilis illum commodi laborum et eius, vel reiciendis
-        laboriosam dolore asperiores repellat, voluptate accusantium eligendi
-        libero ea explicabo. Lorem ipsum dolor sit amet consectetur adipisicing
-        elit.
-      </p>
+
+      <iframe
+        class="about-video"
+        src="https://www.youtube.com/embed/tN-n6rkmxbE?rel=0&amp;amp;showinfo=0&amp;enablejsapi=1&amp;origin=http%3A%2F%2Ficecreamservice.com.ua"
+        data-gtm-yt-inspected-8598097_18="true"
+        id="54598384"
+      ></iframe>
     </form>
   </div>
 </div>
