--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="contacts">
     <div class="container footer__container">
       <ul class="foot_button">
         <li> <button type="button" class="foot_button-location">Our Locations        
