--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -12,7 +12,7 @@
                         </a>
                     </li>
                     <li class="navigation__item">
-                        <a class="navigation__link" href="#about">
+                        <a class="navigation__link" href="#advantages">
                             About us
                         </a>
                     </li>
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="navigation__item">
-                        <a class="navigation__link" href="#contact">
+                        <a class="navigation__link" href="#contacts">
                             Contact
                         </a>
                     </li>
