--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,19 +1,27 @@
-.hero .container  {
+.hero {
+    background-color: var(--hero-bcg-color);
+    z-index: 1;
+}
+
+
+.container_hero  {
     padding-right: 0;
     padding-left: 20px;
     padding-top: 83px;
-        min-width: 320px;
-        height: 502px;
-        background-color: #FFB8CA;
-    
+
+    min-width: 320px;
+    height: 502px;
+    // z-index: 1000;
     }
 
     .hero__content {
-
+        z-index: 1000;
     }
 .hero__titel {
+    
     margin-top: 110px;
     margin-bottom: 19px;
+    
 }
 
     .hero__titel--white {
@@ -24,7 +32,8 @@
         letter-spacing: 0.04em;
         text-transform: uppercase;
         
-        color: #FFFFFF
+        color: #FFFFFF;
+       
     }
 
     .hero__titel--acent {
@@ -40,22 +49,73 @@
         color: #D41443;
     }
 
-@media screen and (min-width: 768px) {
-    .hero .container  {
+//Hero-btn
+.hero-btn {
+    display: flex;
+}
+
+//Ice-Cream
+
+.ice__cream {
+    position: relative;
+}
+
+// .ice__cream:before {
+//     content: '';
+//     background-color: #FFA5BA;
+//   height: 344px;
+//   width: 346px;
+//   position: absolute;
+//   top: -250px;
+//   left: 80%;
+//   transform: translate(-50%, -50%);
+//   border-radius: 50%;
+// }
+
+.ice__cream_img {
+    position: absolute;
+    top: 250px;
+
+    left:calc(100% - 300px);
+    // left: calc(100% - 115px);
+    transform: translate(-50%, -50%);
+
+    // z-index: 3;
+}
+
+.girl-img {
+    position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     transform: translate(-50%, -50%);
+}
+
+
+// .milk-img {
+//     position: absolute;
+//     bottom: 0;
+//     right: 0;
+//     transform: translate(-50%, -50%);
+// }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+   .container_hero  {
         padding-right: 34px;
-        padding-left: 34;
+        padding-left: 34px;
         padding-top: 83px;
             min-width: 768px;
             height: 399px;
     }
 } 
 @media screen and (min-width: 1200px) {
-    .hero .container  {
-        padding-right: 34px;
-        padding-left: 34;
+    .container_hero  {
+
+        // padding-right: 34px;
+        padding-left: 70px;
         padding-top: 83px;
-            min-width: 768px;
+            max-width: 1120px;
             height: 665px;
     }
 }
+
      
