--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,8 +4,14 @@
     --bright-accent-color: #ffa5ba;
     --dark-accent-color: #d41443;
     --primary-bcg-color: #fff5f6;
+    --hero-bcg-color: #FFB8CA;
     --button-color: #ffffff;
+    --button-color-bn: #ECEBEB;
+    --button-color-Prod: #C7133E;
+    --menu-bg-color: #E17992;
+    --menu-border: #E18298;
     --font-family: 'DM Sans', sans-serif;
     --time: 250ms;
+    --time-menu: 1250ms;
     --delay: cubic-bezier(0.4, 0, 0.2, 1);
   }
