--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,107 @@
 <header class="hero">
-    <div class="container">
+
+
+    <div class="container container_hero">
+
 <div class="hero__content">
     <h1 class="hero__titel">
         <span class="hero__titel--white">ice cream <br>
             made with</span><br><span class="hero__titel--acent">passion</span>
     </h1>
 </div>
+ 
+ <div class="hero-btn">  
+<button class="btn__products" type="button">
+    <span class="btn__title__products">Products</span>
+    
+</button>
 
+<button class="btn__made" type="button">
+    <span class="btn__title__made">How it’s made?</span>
+    
+</button>
     </div>
+
+</div> 
+
+<div class="ice__cream">
+<!-- <div class="circl"></div> -->
+    <picture>
+        <source srcset="./images/hero/ice/ice-cream-desktop-pic.webp 1x, 
+                         ./images/hero/ice/ice-cream-desktop-pic@2x.webp 2x"
+                         media="(min-width:1200px)" 
+                         type="image/webp">                
+             <source srcset="./images/hero/ice/ice-cream-desktop-pic.png 1x, 
+                             ./images/hero/ice/ice-cream-desktop-pic@2x.png 2x" 
+                         media="(min-width:1200px)">
+
+         
+         <source srcset="./images/hero/ice/ice-cream-tablet-pic.webp 1x, 
+                         ./images/hero/ice/ice-cream-tablet-pic@2x.webp 2x"
+                         media="(min-width:768px)" 
+                         type="image/webp">
+             <source srcset="./images/hero/ice/ice-cream-tablet-pic.png 1x, 
+                             ./images/hero/ice/ice-cream-tablet-pic@2x.png 2x" 
+                         media="(min-width:768px)">
+
+
+         <source srcset="./images/hero/ice/ice-cream-mobile-pic.webp 1x, 
+                         ./images/hero/ice/ice-cream-mobile-pic@2x.webp 2x"
+                         media="(max-width:767px)" 
+                         type="image/webp">
+             <source srcset="./images/hero/ice/ice-cream-mobile-pic.png 1x, 
+                             ./images/hero/ice/ice-cream-mobile-pic@2x.png 2x" 
+                         media="(max-width:767px)"> 
+
+             <img class="ice__cream_img" src="./images/hero/ice/ice-cream-mobile-pic.png" alt="Our delicious ice cream">
+     </picture>
+
+</div>
+
+<div class="girl-img">
+    <picture>
+        <source srcset="./images/hero/girl/girl-desktop-pic.webp 1x, 
+                         ./images/hero/girl/girl-desktop-pic@2x.webp 2x"
+                         media="(min-width:1200px)" 
+                         type="image/webp">                
+             <source srcset="./images/hero/girl/girl-desktop-pic.png 1x, 
+                             ./images/hero/girl/girl-desktop-pic@2x.png 2x" 
+                         media="(min-width:1200px)">
+
+         
+         <source srcset="./images/hero/girl/girl-tablet-pic.webp 1x, 
+                         ./images/hero/girl/girl-tablet-pic@2x.webp 2x"
+                         media="(min-width:768px)" 
+                         type="image/webp">
+             <source srcset="./images/hero/girl/girl-tablet-pic.png 1x, 
+                             ./images/hero/girl/girl-tablet-pic@2x.png 2x" 
+                         media="(min-width:768px)">
+
+             <img class="ice__cream_img" src="./images/hero/girl/girl-tablet-pic.png" alt="Girl eating ice cream with pleasure">
+     </picture>
+</div>
+
+<div class="milk-img">
+    <picture>
+        <source srcset="./images/hero/milk/milk-desktop-pic.webp 1x, 
+                         ./images/hero/milk/milk-desktop-pic@2x.webp 2x"
+                         media="(min-width:1200px)" 
+                         type="image/webp">                
+             <source srcset="./images/hero/milk/milk-desktop-pic.png 1x, 
+                             ./images/hero/milk/milk-desktop-pic@2x.png 2x" 
+                         media="(min-width:1200px)">
+
+         
+         <source srcset="./images/hero/milk/milk-tablet-pic.webp 1x, 
+                         ./images/hero/milk/milk-tablet-pic@2x.webp 2x"
+                         media="(min-width:768px)" 
+                         type="image/webp">
+             <source srcset="./images/hero/milk/milk-tablet-pic.png 1x, 
+                             ./images/hero/milk/milk-tablet-pic@2x.png 2x" 
+                         media="(min-width:768px)">
+
+             <img class="ice__cream_img" src="./images/hero/milk/milk-tablet-pic.png" alt="Girl eating ice cream with pleasure">
+     </picture>
+</div>
+
 </header>
