--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,11 +1,22 @@
 // mobile-hybrit 
 .container {
+    width: 100%;
     padding: 0 20px;
     margin: 0 auto;
 }
 
+@media screen and (min-width: 480px) {
+
+    .container  {
+        max-width: 480px;
+    }
+}
+
+
 @media screen and (min-width: 768px) {
     .container {
+        max-width: 768px;
+
         padding: 0 34px;
         margin: 0 auto;
     }
@@ -13,6 +24,8 @@
 
 @media screen and (min-width: 1200px) {
     .container {
+        max-width: 1050px;
+
         padding: 0 115px;
         margin: 0 auto;
     }
