--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -16,10 +16,12 @@
  
     transform: translateX(100%);
 
-    transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform var(--time-menu) var(--delay);
 
-    // background-color: var(--primary-bg-color);
-    background-color: #E17992;
+    background-color: var(--menu-bg-color);
+    // background-color: #E17992;
+
+    filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
 
     z-index: 10;
 
@@ -88,61 +90,14 @@
     &:focus {
         fill: var(--accent-color);
     }
-
 }
 
 .mobile__menu__nav {
     margin-bottom: 64px;
 }
-
-// .mobile__menu__item {
-//     text-decoration: none;
-// }
-
-//Mobile BTN
-.btn__order {
-    display: inline-block;
-    text-align: center;
-    
-    width: 209px;
-    height: 44px;
-  
-    border-radius: 22px;
-    border: 0;
-    
-    background-color: #FFFFFF;
-    color: #D41443;
-  
-    // Левый паддинг измерил вручную
-    padding-left: 56px;
-    padding-right: 48px;
-  
-    margin: 0 auto;
-    margin-bottom: 32px;
-  }
-  
-  .btn__title {
-   
-  font-weight: 700;
-  //MIXIN Добавить //////////////////////////////
-  font-size: 16px;
-  line-height: 21px;
-  
-  color: #D41443;
-  }
-
-  .btn__order-icon {
-      width: 8px;
-      height: 10px;
-      margin-left: 27px;
-      fill: currentColor;
-  }
-
-//   ./images/about/about-sprite.svg#icon-Vector-1
-  // END Mobile BTN
   
   //Mobile Navigation
-  .mobile__menu__nav {
+.mobile__menu__nav {
   
       & .nav__item{
           display: block;
@@ -155,33 +110,21 @@
           padding-top: 12px;
           padding-bottom: 12px;
   
-          border-top: 1px solid #E18298;
+          border-top: 1px solid var(--menu-border);
   
           &:last-child {
-              border-bottom:  1px solid #E18298;
+              border-bottom:  1px solid var(--menu-border);
           }
       }
-  }
+}
   
-  .mobile__menu__item {
-  font-weight: 700;
-  //MIXIN Добавить //////////////////////////
-  font-size: 14px;
-  line-height: 18px;
-  
-  color: #FFFFFF;
-     
-  font-weight: 700;
-  //MIXIN Добавить ///////////////////////
-  font-size: 14px;
-  line-height: 18px;
-  }
-  
-  // .nav__item:not(:last-child) {
-  //     margin-bottom: 23px;
-  // }
-  
-  .mobile__menu__item:focus {
-      // color: var(--accent-color);
-      color: #D41443;
-  }
+.mobile__menu__item {
+    @include fw_fs_line-height-calc(700,14,18);
+ 
+    color: var(--button-color);
+ 
+}
+
+.mobile__menu__item:focus {
+    color: var(-dark-accent-color);
+}
