--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 
 
 
-<section class="contacts-cards__section" id="contacts">
+<section class="contacts-cards__section">
     <div class="container">
     <h2 class="contacts-cards__section-title visually-hidden">Cafe contacts</h2>
     <ul class="contacts-cards__list">
