--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -55,7 +55,7 @@
   background: #fff5f6;
   background-repeat: no-repeat;
   background-size: cover;
-  // background-image: url("/src/images/contacts/bg.png");
+  // background-image: url("/images/contacts/bg.png";
   //  background-image: url('../src/images/bg.png');
 }
 
