--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -153,6 +153,7 @@
   bottom: 367px;
   left: 50%;
   transform: translateX(-50%);
+  background-size: contain;
   
   // right: 10px;
   background-repeat: no-repeat;
