--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,13 +1,16 @@
 .products {
-  padding: 121px 20px 98px 20px;
+  padding-top: 120px;
+  padding-bottom: 98px;
   background-color: $bg-main;
 
   @media screen and (min-width: 768px) {
-    padding: 122px 34px 112px 34px;
+    padding-top: 122px;
+  padding-bottom: 112px;
   }
 
   @media screen and (min-width: 1200px) {
-    padding: 127px 117px 119px 116px;
+     padding-top: 126px;
+  padding-bottom: 120px;
   }
 }
 
