Зроблено градієнт фону gallery

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,3 +1,12 @@
+.gallery {
+  // width: 100%;
+  background: linear-gradient(
+    to bottom,
+    var(--accent-bgc) 39%,
+    var(--accent-bgc) 39%,
+    transparent 40%
+  );
+}
 .gallery--img {
   margin: 0 auto;
   width: 100%;
