1 width-btn 2 style-desktop

--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,7 +1,7 @@
 .contacts {
     padding-top: 86px;
     padding-bottom: 113px;
-    background: linear-gradient(to bottom,$bg-main 11%, $bg-light-pink 11% 89% );
+    background: linear-gradient(to bottom,$bg-main 11%, $bg-light-pink 11% 89%);
 }
 
 .contacts-list {
@@ -9,16 +9,15 @@
 }
 
 .contacts-item {
-    
     width: 220px;
     padding: 43px 20px;
     background-color: $bg-main;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
-    margin: auto; 
     
-    &:not(:last-child) {
-        @media screen and (max-width: 767px) {
+    @media screen and (max-width: 767px) {
+        margin: auto; 
+            &:not(:last-child) {
             margin-bottom: 20px;
         }
     }
@@ -89,9 +88,6 @@
     line-height: 1.833;
     color: $color-dark;
 }
-
-
-
 .contacts-time {
     color: $color-pink;
     font-weight: 500;
@@ -99,38 +95,40 @@
     line-height: 1.183;
 }
 
-//buttons//
 .contacts-btn-list {
     text-align: center;
 }
+
+
+//buttons//
 .contacts-btn-list {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    @media screen and (max-width: 767px) {
-        flex-direction: column;
-    }
     
     @media screen and (max-width: 767px) {
         flex-direction: column;
     }
 }
 
-.contacts-btn-item {
-    &:not(:last-child) {
-        @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
+    .contacts-btn-item {
+        &:not(:last-child) {
             margin-bottom: 10px;
         }
     }
+        .contacts-btn-red, .contacts-btn-white {
+            width: 161px;
+        }
 }
+
 
 @media screen and (min-width: 768px) {
     .contacts {
         padding-top: 0;
         // padding-top: 119px;
         padding-bottom: 158px;
-        background: linear-gradient(to bottom,$bg-main 8%, $bg-light-pink 8% 91% );
+        background: linear-gradient(to bottom,$bg-main 8%, $bg-light-pink 8px 92%);
     }
 
     .contacts-list {
@@ -142,9 +140,9 @@
 
     .contacts-item {
         padding: 50px 31px;
-        &:not(:last-child) {
-            margin-right: 20px;
-        }
+            &:not(:last-child) {
+                margin-right: 20px;
+            }
     }
 
     .contacts-representation {
@@ -208,22 +206,16 @@
 
 .contacts-btn-item {
     &:not(:last-child) {
-
-        @media screen and (max-width: 767px) {
-            margin-bottom: 10px;
-
         margin-right: 15px;
         }
     }
 }
-
-
-@media screen and (min-width: 768px) {
-    .contacts {
-        padding-top: 0;
-        // padding-top: 119px;
-        padding-bottom: 158px;
-        background: linear-gradient(to bottom,$bg-main 8%, $bg-light-pink 8% 91% );
+@media screen and (max-width: 1199px) {
+    .contacts-btn-red {
+        width: 191px;
+    }
+    .contacts-btn-white {
+        width: 174px;
     }
 }
 
@@ -232,90 +224,58 @@
         padding-top: 0;
         // padding-top: 132px;
         padding-bottom: 165px;
+        background: linear-gradient (to bottom, $bg-main 11%, $bg-light-pink 11% 89%);
+    }
+
+    .bg-img {
         background-image: url(../images/bg-contacts@1x.png);
-        background-color: linear-gradient(to bottom,$bg-main 8%, $bg-light-pink 8% 91%);
+        background-position: right 0px top 100px;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 
     .contacts-list {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 81px;
+        margin-bottom: 86px;
     }
 
     .contacts-item {
-        padding: 50px 31px;
+        width: 330px;
+        padding: 51px 43px;
         &:not(:last-child) {
-            margin-right: 20px;
+            margin-right: 31px;
         }
-    }
-
-    .contacts-representation {
-        margin-bottom: 30px;
-        font-size: 16px;
-        line-height: 1.875;
-    }
-
-    .rectangle-cafe {
-        width: 73px;
-        height: 28px;
-    }
-
-    .rectangle-foodtruck {
-        width: 138px;
-        height: 28px;
     }
 
     .contacts-wrap {
         &::after {
             content: "";
             display: block;
-            margin-top: 30px;
-            margin-bottom: 30px;
+            margin-top: 32px;
+            margin-bottom: 32px;
         }
-    }
-
-    .contacts-wrap-days {
-        margin-bottom: 16px;
     }
 
     .contacts-subtitle {
-        margin-bottom: 14px;
-        font-size: 14px;
-        line-height: 1.857;
+        margin-bottom: 10px;
+        font-size: 16px;
+        line-height: 1.875;
     }
 
-    .contacts-desc {
-        font-size: 14px;
-        line-height: 1.643;
+    .contacts-desc, .contact-link {
+        font-size: 16px;
+        line-height: 1.813;
+    }
+    .contacts-days, .contacts-time {
+        font-size: 16px;
+        line-height: 1.875;
     }
 
-    .contact-link {
-        font-size: 14px;
-        line-height: 1.857;
+    //buttons
+
+    .contacts-btn-red {
+        width: 198px;
     }
-
-    
-    .contacts-time {
-        font-size: 14px;
-        line-height: 1.857;
-        color: $color-pink;
+    .contacts-btn-white {
+        width: 180px;
     }
-
-
-    .contacts-days {
-        font-size: 14px;
-        line-height: 1.833;
-        color: $color-dark;
-    }
-
-
-    //buttons//
-
-.contacts-btn-item {
-    &:not(:last-child) {
-        margin-right: 15px;
-        }
-    }
-}
 }
