--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -12,7 +12,7 @@
         <img src="./images/reviews/reviews-desktop-pic.jpg" alt="галерея">
     </picture>
 </section>
-<section class="rewiew "> 
+<section class="rewiew container"> 
     <h2 class="visually-hidden">Reviews</h2>
     <div class="rewiew-card ">
         <div class="reviews-slide">
