--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -53,19 +53,19 @@
             </button>
             <ul class="list mobile-menu__list">
                 <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#home">Home</a>
+                    <a class="mobile-menu__link" href="#home" data-menu-close>Home</a>
                 </li>
                 <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#about">About us</a>
+                    <a class="mobile-menu__link" href="#about" data-menu-close>About us</a>
                 </li>
                 <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#How-it’s-made?">How it’s made?</a>
+                    <a class="mobile-menu__link" href="#How-it’s-made?" data-menu-close>How it’s made?</a>
                 </li>
                 <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#product">Our products</a>
+                    <a class="mobile-menu__link" href="#product" data-menu-close>Our products</a>
                 </li>
                 <li class="mobile-menu__item">
-                    <a class="mobile-menu__link" href="#contact">Contact</a>
+                    <a class="mobile-menu__link" href="#contact" data-menu-close>Contact</a>
                 </li>
             </ul>
         </div>
