--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,3 @@
-
 <section class="about">
     <div class="container">
         <div>
@@ -7,26 +6,31 @@
         </div>
         <div class="box-wrap">
             <div class="img-box item-wrap">
-                <source srcset="./images/img-advantages/cow-desctop.png 1x, ./images/img-advantages/cow-desctop@2x.png 2x"
-                        media="(min-width:1200px)">
+                <picture>
+                    <source srcset="./images/img-advantages/cow-desctop.png 1x, ./images/img-advantages/cow-desctop@2x.png 2x"
+                            media="(min-width:1200px)">
 
-                <source srcset="./images/img-advantages/cow-tablet.png 1x, ./images/img-advantages/cow-tablet@2x.png 2x"
-                        media="(min-width:768px)">
+                    <source srcset="./images/img-advantages/cow-tablet.png 1x, ./images/img-advantages/cow-tablet@2x.png 2x"
+                            media="(min-width:768px)">
 
-                <source srcset="./images/img-advantages/cow-mobile.png 1x, ./images/img-advantages/cow-mobile@2x.png 2x">
+                    <source srcset="./images/img-advantages/cow-mobile.png 1x, ./images/img-advantages/cow-mobile@2x.png 2x">
 
-                <img class="gallery--img" src="./images/img-advantages/cow-mobile.png" alt="photo collage">
+                    <img class="about--img" src="./images/img-advantages/cow-mobile.png" alt="photo cow">
+
+                </picture>
+
             </div>
             <div class="info-box item-wrap">
                 <b>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
                     egestas eros. Maecenas eleifend erat at justo fringilla.</b>
 
-                <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet
+                <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
+                    imperdiet
                     placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
                     tincidunt.
-                   <br>&nbsp;<br>
+                    <br>&nbsp;<br>
                     Aliquam erat volutpat. Aenean accumsan.</p>
-                <button class="about-btn" type="button">Franchise
+                <button class="about-btn" type="button">Read more
                     <svg class="about-icon">
                         <use href="./images/sprite/sprite_projects.svg#contacts-icon-btn"></use>
                     </svg>
@@ -37,4 +41,4 @@
     </div>
 
 
-    </section>
+</section>
